--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <spring.version>3.1.0.RELEASE</spring.version>
     <activemq.version>5.9.1</activemq.version>
     <spring.redis.version>1.8.4.RELEASE</spring.redis.version>
+    <framework2.version>1.6.0</framework2.version>
   </properties>
 
   <dependencies>
@@ -92,6 +93,36 @@
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-redis</artifactId>
       <version>${spring.redis.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.caucho</groupId>
+      <artifactId>hessian</artifactId>
+      <version>4.0.7</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.2.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.3</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sfpay.framework2</groupId>
+      <artifactId>framework2-context</artifactId>
+      <version>${framework2.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+      <version>${spring.version}</version>
     </dependency>
 
   </dependencies>
