--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,18 @@
       <version>${spring.version}</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.jcraft</groupId>
+        <artifactId>jsch</artifactId>
+        <version>0.1.54</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
