--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
       <version>2.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>1.7.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
