--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,21 @@
       <version>2.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.5.13</version>
+    </dependency>
+
+           
+    <dependency>
+      <groupId>com.itextpdf.tool</groupId>
+      <artifactId>xmlworker</artifactId>
+      <version>5.5.9</version>
+    </dependency>
+
+
+
   </dependencies>
 
   <build>
