--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
       <version>5.5.9</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.0</version>
+    </dependency>
 
 
   </dependencies>
