--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,18 @@
       <version>4.0</version>
     </dependency>
 
+    <!-- quartz定时任务 -->
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz-jobs</artifactId>
+      <version>2.2.3</version>
+    </dependency>
+
 
   </dependencies>
 
