--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <name>ficus-code-suitcase Maven Webapp</name>
   <url>http://maven.apache.org</url>
-<!--  <distributionManagement>
+  <distributionManagement>
     <repository>
       <id>releases</id>
       <url>http://maven.sf-pay.com:8081/nexus/content/repositories/releases</url>
@@ -20,7 +20,7 @@
       <id>snapshots</id>
       <url>http://maven.sf-pay.com:8081/nexus/content/repositories/snapshots</url>
     </snapshotRepository>
-  </distributionManagement>-->
+  </distributionManagement>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,17 +38,6 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-server</artifactId>
-      <version>9.2.14.v20151106</version>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-servlet</artifactId>
-      <version>9.2.15.v20160210</version>
     </dependency>
 
     <!-- slf4j日志 Begin-->
@@ -90,12 +79,6 @@
     <!-- activemq stop -->
 
     <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-redis</artifactId>
-      <version>${spring.redis.version}</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.caucho</groupId>
       <artifactId>hessian</artifactId>
       <version>4.0.7</version>
@@ -107,11 +90,6 @@
       <version>3.2.1</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>4.5.3</version>
-    </dependency>
 
     <dependency>
       <groupId>com.sfpay.framework2</groupId>
@@ -155,18 +133,6 @@
       <version>2.4</version>
     </dependency>
 
-    <dependency>
-      <groupId>com.itextpdf</groupId>
-      <artifactId>itextpdf</artifactId>
-      <version>5.5.13</version>
-    </dependency>
-
-           
-    <dependency>
-      <groupId>com.itextpdf.tool</groupId>
-      <artifactId>xmlworker</artifactId>
-      <version>5.5.9</version>
-    </dependency>
 
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -189,40 +155,54 @@
 
   </dependencies>
 
+  <profiles>
+    <profile>
+      <id>local</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <properties>
+        <profile.properties>properties</profile.properties>
+        <logs.properties>/tomcat/logs/${project.artifactId}</logs.properties>
+        <profile.product>false</profile.product>
+        <profile.logbase>d:</profile.logbase>
+      </properties>
+    </profile>
+    <profile>
+      <id>product</id>
+      <properties>
+        <profile.properties>profiles/${project.artifactId}/properties</profile.properties>
+        <logs.properties>/tomcat/logs/${project.artifactId}</logs.properties>
+        <profile.product>true</profile.product>
+        <profile.logbase>/tomcat</profile.logbase>
+      </properties>
+    </profile>
+  </profiles>
   <build>
-    <finalName>ficus-code-suitcase</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.7.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.20.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>3.2.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <finalName>${project.artifactId}</finalName>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-archetype-plugin</artifactId>
+        <version>2.3</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
+
 </project>
